[package]
name = "agent_listen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-watch = "8.4.0"
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
get_if_addrs = "0.5.3"
r2d2 = "0.8.10"
r2d2-oracle = { version = "0.6.0", features = ["chrono"] }
rcgen = "0.10.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "mysql", "chrono"] }
tokio = { version = "1.28.2", features = ["full"] }
