[package]
name = "agent_listen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-watch = "8.4.0"
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
get_if_addrs = "0.5.3"
oracle = { version = "0.5.7", features = ["chrono", "stmt_without_lifetime", "aq_unstable"] }
rcgen = "0.10.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "mysql", "chrono"] }
sysinfo = "0.29.7"
tokio = { version = "1.28.2", features = ["full"] }
